Prototype d'enregistrement d'évènements et de sauvegarde dans un fichier

--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,7 @@
         <link href="./popup.css" rel="stylesheet"/>
     </head>
     <body>
-        <button id="openBtn">Ouvrir</button>
+        <button id="openBtn">Sauvegarder les données</button>
         <script type="text/javascript" src="popup.js"></script>
     </body>
 </html>
