Designed the left side-bar

--- a/Index.html
+++ b/Index.html
@@ -6,13 +6,16 @@
     <body>
         <div class="Container">
             <div class="Left">
-                <img class="Logo" src="Img/LogoOriginal.png">
-
-                Usual
-                <br />Usage 
-                <br />on the Web
+                <img class="Logo" src="Img/LogoOriginal.png">     
             </div>
 
+            <div class="Title">
+                <span>
+                    Usual
+                    <br />Usage 
+                    <br />on the Web
+                </span>
+            </div>
             <div class="Right">
                 <button id="openBtn">
                     Save
