Designed the right side-bar

--- a/Index.html
+++ b/Index.html
@@ -17,8 +17,20 @@
                 </span>
             </div>
             <div class="Right">
-                <button id="openBtn">
-                    Save
+                <p class="Subtitle">
+                    Allowed websites
+                </p>
+                <p class="Text">
+                    Your UWU extension is currently allowed to study your interactions on the websites whose URL contains the following strings
+                </p>
+                <p class="Subtitle">
+                    Keep the control
+                </p>
+                <p class="Text">
+                    At anytime you can have a look on the data your UWU extension is currently saving and sending to us for education purpose only
+                </p>
+                <button class="Button" id="openBtn">
+                    Download my data
                 </button>
             </div>
         </div>
