Added some html elements

--- a/Index.html
+++ b/Index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
         <link href="Css/Style.css" rel="stylesheet"/>
+        <meta name="author" content="Yann Boucher" />
+		<meta name="author" content="Mathilde Lange" />
+        <meta name="author" content="Léo Mullier" />
     </head>
     <body>
         <div class="Container">
             <div class="Left">
-                <img class="Logo" src="Img/LogoOriginal.png">     
+                <a href="https://uwu.onthewifi.com">
+                    <img class="Logo" src="Img/LogoOriginal.png">  
+                </a>   
             </div>
 
             <div class="Title">
@@ -23,6 +29,7 @@
                 <p class="Text">
                     Your UWU extension is currently allowed to study your interactions on the websites whose URL contains the following strings
                 </p>
+
                 <div class="Site">
                     <label class="SiteText" for="utc.fr">
                         *utc.fr*
@@ -32,6 +39,7 @@
                         <span class="toggle-switch"></span>
                     </label>
                 </div>
+
                 <p class="Subtitle" style="margin-top: 30px;">
                     Keep the control
                 </p>
@@ -49,6 +57,17 @@
                         </svg>
                     </button>
                 </div>
+
+                <p class="Subtitle" style="margin-top: 30px;">
+                    About UWU
+                </p>
+                <p class="Text">
+                    UWU is a browser add-on made by a team of students from the University of Technologie of Compiègne (in France). 
+                    <br>
+                    <br>It aim is to collect data about the interactions on specific websites made by real users. 
+                    <br>
+                    <br>This experimentation is only for education purpose and the collected data are only used by researchers and students.
+                </p>
             </div>
         </div>
         <script type="text/javascript" src="Js/Script.js"></script>
