--- a/Index.html
+++ b/Index.html
@@ -18,7 +18,7 @@
             </div>
             <div class="Right">
                 <button id="openBtn">
-                    Save
+                    Save logged session data
                 </button>
             </div>
         </div>
