--- a/Index.html
+++ b/Index.html
@@ -27,24 +27,24 @@
                     Allowed websites
                 </p>
                 <p class="Text">
-                    Your UWU extension is currently allowed to study your interactions on the websites whose URL contains the following strings
+                    Your UWU add-on is currently allowed to study your interactions on the websites whose URL contains the following string. 
                 </p>
 
                 <div class="Site">
-                    <label class="SiteText" for="utc.fr">
+                    <label class="SiteText" style="width:100%; cursor: default;" for="utc.fr">
                         *utc.fr*
                     </label>
-                    <label>
+                    <!-- <label>
                         <input class="toggle-checkbox" type="checkbox" id="utc.fr"/>
                         <span class="toggle-switch"></span>
-                    </label>
+                    </label> -->
                 </div>
 
                 <p class="Subtitle" style="margin-top: 30px;">
                     Keep the control
                 </p>
                 <p class="Text">
-                    At anytime you can have a look on the data your UWU extension is currently saving and sending us for education purpose only
+                    At anytime you can have a look at the data your UWU add-on is currently saving and sending us for education purpose only
                 </p>
                 
                 <div class="Site">
@@ -62,11 +62,14 @@
                     About UWU
                 </p>
                 <p class="Text">
-                    UWU is a browser add-on made by a team of students from the University of Technologie of Compiègne (in France). 
+                    UWU is a browser add-on made by a team of students from the University of Technology of Compiègne (in France). 
                     <br>
-                    <br>It aim is to collect data about the interactions on specific websites made by real users. 
+                    <br>Its aim is to collect data about the interactions made by real users on specific websites. 
                     <br>
                     <br>This experimentation is only for education purpose and the collected data are only used by researchers and students.
+                    <br>
+                    <br><span style="font-family: Bold;">To remove UWU's authorizations</span> to capture your interactions, you can simply disable UWU add-on form your browser's add-ons menu
+                    
                 </p>
             </div>
         </div>
