Deleted some dots

--- a/Index.html
+++ b/Index.html
@@ -27,7 +27,7 @@
                     Allowed websites
                 </p>
                 <p class="Text">
-                    Your UWU add-on is currently allowed to study your interactions on the websites whose URL contains the following string. 
+                    Your UWU add-on is currently allowed to study your interactions on the websites whose URL contains the following string
                 </p>
 
                 <div class="Site">
@@ -62,11 +62,11 @@
                     About UWU
                 </p>
                 <p class="Text">
-                    UWU is a browser add-on made by a team of students from the University of Technology of Compiègne (in France). 
+                    UWU is a browser add-on made by a team of students from the University of Technology of Compiègne (in France) 
                     <br>
-                    <br>Its aim is to collect data about the interactions made by real users on specific websites. 
+                    <br>Its aim is to collect data about the interactions made by real users on specific websites
                     <br>
-                    <br>This experimentation is only for education purpose and the collected data are only used by researchers and students.
+                    <br>This experimentation is only for education purpose and the collected data are only used by researchers and students
                     <br>
                     <br><span style="font-family: Bold;">To remove UWU's authorizations</span> to capture your interactions, you can simply disable UWU add-on form your browser's add-ons menu
                     
