changed DL button text

--- a/Index.html
+++ b/Index.html
@@ -49,7 +49,7 @@
                 
                 <div class="Site">
                     <label class="SiteText" for="openBtn">
-                        download my data
+                        get my data
                     </label>
                     <button class="Button" id="openBtn">
                         <svg class="ButtonIcon" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512">
