swtiched to UWU

--- a/Index.html
+++ b/Index.html
@@ -18,8 +18,8 @@
             <div class="Title">
                 <span>
                     Usual
-                    <br />Usage 
-                    <br />on the Web
+                    <br />Web
+                    <br />Usage
                 </span>
             </div>
             <div class="Right">
